src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__add_author_ui__add_author_ui_tests__tests__snapshot_tests__add_author_modal_ui_renders_an_author_with_no_overview.snap
---
source: src/ui/readarr_ui/library/add_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭────────────────────────────────  Add - Test Author (American novelist)  ────────────────────────────────╮                              
                     ╭──────│                                                                                                         │───────╮                      
                     │Test A│                                                                                                         │       │                      
                     ╰──────│                                                                                                         │───────╯                      
                     ╭──────│                                                                                                         │───────╮                      
                     │   ✔  │                                                                                                         │       │                      
                     │=> ✔  │                                                                                                         │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                     Root Folder: │/nfs                                           ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                         Monitor: │All Books                                      ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                               Monitor New Items: │All Books                                      ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                 Quality Profile: │eBook                                          ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                Metadata Profile: │Author Only                                    ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                            Tags: │usenet, testing                                  │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│       │                      
                     │      ││                        Add                        ││                      Cancel                      ││       │                      
                     ╰──────│╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│───────╯                      
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
