src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__add_author_ui__add_author_ui_tests__tests__snapshot_tests__add_author_ui_AddAuthorEmptySearchResults.snap
---
source: src/ui/readarr_ui/library/add_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                     ╭─────────────────────────────────────────────────────  Add Author  ─────────────────────────────────────────────────────╮                      
                     │Test Author                                                                                                             │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                      
                     ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                       ╭───────────────  Error  ───────────────╮                                        │                      
                     │                                       │ No authors found matching your query! │                                        │                      
                     │                                       │                                       │                                        │                      
                     │                                       ╰───────────────────────────────────────╯                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
